--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "name": "rreaddir-sync",
   "optionalDependencies": {},
-  "readme": "ERROR: No README data found!",
+  "readme": "See github [documentation](https://github.com/geremy22/rreaddir-sync#readme)",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/geremy22/rreaddir-sync.git"
@@ -39,5 +39,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.0.4"
+  "version": "1.0.9",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "index.js"
+  ]
 }
